# Assignments-BOT

./: Assignment 2 Abhimanyu Singh Rathore-checkpoint.ipynb  Assignment2-DhairyaJain.ipynb  Assignment_2_kaustubh.ipynb  README.md  assignment-Gukirt Kaur (1).ipynb  assignment-tamannayadav.ipynb  assignment_7_Suryansh.ipynb  demo_json.json
Assignment_vibeCoding/: readme.md
RAG_Real_life_use_case_Week3_Day5/Assignment-ANKIT_LUHAR/: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
RAG_Real_life_use_case_Week3_Day5/Assignment-ANKIT_LUHAR/config/: __init__.py  constants.py  logging_config.py  settings.py
RAG_Real_life_use_case_Week3_Day5/Assignment-ANKIT_LUHAR/docs/: api_reference.md  architecture.md  deployment_guide.md  generation_parameters.md  model_selection.md  troubleshooting.md
RAG_Real_life_use_case_Week3_Day5/Assignment-ANKIT_LUHAR/frontend/: app.py
RAG_Real_life_use_case_Week3_Day5/Assignment-ANKIT_LUHAR/frontend/assets/: styles.css
RAG_Real_life_use_case_Week3_Day5/Assignment-ANKIT_LUHAR/frontend/components/: chat_widget.py  feedback_form.py  sidebar.py
RAG_Real_life_use_case_Week3_Day5/Assignment-ANKIT_LUHAR/scripts/: health_check.py  ingest_data.py  scrape_dpworld.py  seed_pinecone.py
RAG_Real_life_use_case_Week3_Day5/Assignment-ANKIT_LUHAR/src/: __init__.py
RAG_Real_life_use_case_Week3_Day5/Assignment-ANKIT_LUHAR/src/api/: __init__.py  dependencies.py  main.py
RAG_Real_life_use_case_Week3_Day5/Assignment-ANKIT_LUHAR/src/chat/: __init__.py  chat_manager.py  feedback_handler.py  history_manager.py  session_manager.py
RAG_Real_life_use_case_Week3_Day5/Assignment-ANKIT_LUHAR/src/generation/: __init__.py  groq_client.py  guardrails.py  prompt_templates.py  response_formatter.py
RAG_Real_life_use_case_Week3_Day5/Assignment-ANKIT_LUHAR/tests/: __init__.py  conftest.py
(+416 files in other folders)
